# adversarial-ml-lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/attacks/: __init__.py  context_tampering.py  inference_evasion.py  prompt_injection.py
src/defenses/: __init__.py  context_filter.py  isolation_server.py  uncertainty_scorer.py
src/utils/: __init__.py  llm_client.py
tests/: test_modules.py
